--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-img" style="background-image: url('/box1_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
                 <P>See more</P>
             </div>
         </div>
@@ -88,14 +88,14 @@
         </div>
         <div class="box4 box"><div class="box-content">
             <h2>Mobiles</h2>
-            <div class="box-img" style="background-image: url('/box4_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
             <P>See more</P>
         </div>
     </div>
     <div class="box5 box">
         <div class="box-content">
             <h2>Beauty Products</h2>
-            <div class="box-img" style="background-image: url('/box5_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
             <P>See more</P>
         </div>
     </div>
@@ -113,7 +113,7 @@
     </div>
     <div class="box8 box"><div class="box-content">
         <h2>Trending Fashion</h2>
-        <div class="box-img" style="background-image: url('/box8_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
         <P>See more</P>
     </div>
 </div>
